[gd_scene load_steps=4 format=4 uid="uid://18gxu48ra1l8"]

[ext_resource type="TileSet" uid="uid://bccafxgg1k3gg" path="res://tileset/game_tile_set.tres" id="1_2bqn8"]
[ext_resource type="Script" uid="uid://cirb6hjugpaiv" path="res://scene/house/shop.gd" id="1_vqv2g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2bqn8"]
size = Vector2(17, 15)

[node name="Shop" type="Node2D"]
script = ExtResource("1_vqv2g")

[node name="houseOuter" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD///7/AwAGAAMAAAD/////AwAGAAQAAAD//wAAAwAGAAUAAAD//wEAAwAGAAYAAAAAAP7/AwAHAAMAAAAAAP//AwAHAAQAAAAAAAAAAwAHAAUAAAABAP7/AwAIAAMAAAABAP//AwAIAAQAAAABAAAAAwAIAAUAAAABAAEAAwAIAAYAAAACAP7/AwAJAAMAAAACAP//AwAJAAQAAAACAAAAAwAJAAUAAAACAAEAAwAJAAYAAAAAAAEAAwAHAAYAAAA=")
tile_set = ExtResource("1_2bqn8")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8.5, 24.5)
shape = SubResource("RectangleShape2D_2bqn8")
debug_color = Color(0.768956, 0.403483, 0.508537, 0.42)

[node name="houseInner" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAD/////BQAAAAEAAAAAAP//BAABAAEAAAABAP//BAABAAEAAAACAP//BQAEAAEAAAACAAAABQAEAAEAAAABAAAABAABAAEAAAD//wAABQAAAAEAAAAAAAAABAABAAEAAAABAP7/BQADAAAAAAAAAP7/BQADAAAAAAACAP7/BQAEAAAAAAD///7/BQAAAAAAAAABAAEABQADAAQAAAD//wEABQAAAAQAAAACAAEABQAEAAQAAAA=")
tile_set = ExtResource("1_2bqn8")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
